<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="app_name">be.arno.crud</string>
    <string name="action_settings">Settings</string>

    <!-- Activities Titles -->
    <string name="title_activity_item_index">Items</string>
    <string name="title_activity_item_new">New Item</string>
    <string name="title_activity_item_list">List Items</string>
    <string name="title_activity_item_show">Show Item</string>
    <string name="title_activity_item_edit">Edit Item</string>
    <string name="title_activity_item_search">Search Item(s)</string>
    <string name="title_activity_category_index">Categories</string>
    <string name="title_activity_category_new">New Category</string>
    <string name="title_activity_category_list">List Categories</string>
    <string name="title_activity_category_show">Show Category</string>
    <string name="title_activity_category_edit">Edit Category</string>
    <string name="title_activity_synchronization">SynchronizationActivity</string>

    <!-- ALL -->
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="created_at">Created at</string>
    <string name="updated_at">Updated at</string>
    <string name="synced_at">Synced at</string>
    <string name="remote_id">Remote ID</string>
    <string name="dataSource_local">Local</string>
    <string name="dataSource_httpServer">Server HTTP</string>    

    <!-- Item -->
    <string name="item">Item</string>
    <string name="items">Items</string>
    <string name="items_found">Items found</string>
    <string name="item_count">Item count</string>
    <string name="date">Date</string>
    <string name="bool">Boolean</string>
    <string name="item_created">Item created</string>
    <string name="item_not_created">Item not created</string>
    <string name="item_updated">Item updated</string>
    <string name="item_not_updated">Item not updated</string>
    <string name="item_deleted">Item deleted</string>
    <string name="item_not_deleted">Item not deleted</string>
    <string name="item_does_not_exist">Item doesn\'t exist</string>
    <string name="sure_delete_item">Delete this item ?</string>

    <!-- Category -->
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="categories_found">Categories found</string>
    <string name="category_count">Category count</string>
    <string name="category_created">Category created</string>
    <string name="category_not_created">Category not created</string>
    <string name="category_updated">Category updated</string>
    <string name="category_not_updated">Category not updated</string>
    <string name="category_deleted">Category deleted</string>
    <string name="category_not_deleted">Category not deleted</string>
    <string name="category_does_not_exist">Category doesn\'t exist</string>
    <string name="sure_delete_category_and_nested_items">Delete this Category and all the Items nested ?</string>

    <!-- Buttons -->
    <string name="NEW">New</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="searchfor">Search for</string>
    <string name="list">List</string>
    <string name="show">Show</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="rating">Rating</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="test">Test</string>
    <string name="fill">Fill</string>
    <string name="deleteAll">Delete all</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="live">Live</string>
    <string name="title_activity_app_prefs">AppPrefsActivity</string>

</resources>
