<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ItemIndexActivity" >

    <Button
        android:id="@+id/itemIndex_bttnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itemIndex_bttnNew"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/search" />

    <Button
        android:id="@+id/itemIndex_bttnList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itemIndex_bttnSearch"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/list" />

    <TextView
        android:id="@+id/itemShow_txvwBool"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/item_count"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/itemIndex_txvwCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemShow_txvwBool"
        android:layout_centerHorizontal="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="64sp" />

    <Button
        android:id="@+id/itemIndex_bttnNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itemIndex_bttnFill"
        android:layout_alignLeft="@+id/itemIndex_bttnSearch"
        android:text="@string/NEW" />

    <Button
        android:id="@+id/itemIndex_bttnDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/deleteAll" />

    <Button
        android:id="@+id/itemIndex_bttnFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itemIndex_bttnDeleteAll"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/fill" />

</RelativeLayout>