<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ItemShowActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itemShow_bttnEdit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/itemShow_txvwIdT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/itemShow_txvwId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/itemShow_txvwNameT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/itemShow_txvwName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/itemShow_txvwDateT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/itemShow_txvwDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/itemShow_txvwRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <RatingBar
                android:id="@+id/itemShow_rtbrRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bool" />

            <TextView
                android:id="@+id/itemShow_txvwBool"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Large Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/itemShow_bttnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itemShow_bttnDelete"
        android:layout_alignParentLeft="true"
        android:text="@string/edit" />

    <Button
        android:id="@+id/itemShow_bttnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/delete" />

    <ImageView
        android:id="@+id/itemShow_imvwImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_launcher" />

    <Button
        android:id="@+id/itemShow_bttnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itemShow_bttnEdit"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/itemShow_txvwPosition"
        android:text="@string/next" />

    <Button
        android:id="@+id/itemShow_bttnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scrollView1"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/itemShow_txvwPosition"
        android:text="@string/previous" />

    <SeekBar
        android:id="@+id/itemShow_skbrPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/scrollView1"
        android:layout_toLeftOf="@+id/itemShow_bttnNext"
        android:layout_toRightOf="@+id/itemShow_bttnPrev" />

    <TextView
        android:id="@+id/itemShow_txvwPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itemShow_skbrPosition"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>