<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CategoryIndexActivity" >

    <Button
        android:id="@+id/categoryIndex_bttnList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/categoryIndex_bttnNew"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/list" />

    <TextView
        android:id="@+id/categoryIndex_txvwCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/category_count"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/categoryIndex_txvwCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/categoryIndex_txvwCountLabel"
        android:layout_centerHorizontal="true"
        android:text="#"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="64sp" />

    <Button
        android:id="@+id/categoryIndex_bttnNew"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/NEW" />

</RelativeLayout>