<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CategoryShowActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/categoryShow_bttnItems"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/categoryShow_txvwId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/categoryShow_txvwName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_count"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/categoryShow_txvwItemsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_count"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>
    </ScrollView>

	<Button
        android:id="@+id/categoryShow_bttnItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/categoryShow_txvwPosition"
        android:layout_alignParentLeft="true"
        android:drawableLeft="@drawable/ic_action_view_as_list"
        android:text="@string/items" />
    
    <ImageButton
        android:id="@+id/categoryShow_bttnNext"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/categoryShow_txvwPosition"
		android:contentDescription="@string/next"
		android:src="@drawable/ic_action_next_item" />

    <ImageButton
        android:id="@+id/categoryShow_bttnPrev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/categoryShow_bttnItems"
		android:contentDescription="@string/previous"
		android:src="@drawable/ic_action_previous_item" />

    <SeekBar
        android:id="@+id/categoryShow_skbrPosition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/categoryShow_bttnNext"
        android:layout_toRightOf="@+id/categoryShow_bttnPrev" />

    <TextView
        android:id="@+id/categoryShow_txvwPosition"
        android:text="# / #"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/categoryShow_skbrPosition"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />	  
    
    <!-- Button
        android:id="@+id/categoryShow_bttnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/categoryShow_bttnDelete"
        android:layout_alignParentLeft="true"
        android:text="@string/edit" /-->

    <!-- Button
        android:id="@+id/categoryShow_bttnDelete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/delete" /-->

</RelativeLayout>