<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ItemSearchActivity" >

    <EditText
        android:id="@+id/itemSearch_edtxSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/itemSearch_bttnSearch"
        android:ems="10"
        android:hint="@string/searchfor" >

        <requestFocus />
    </EditText>

    <ListView
        android:id="@+id/itemSearch_lsvwList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/itemSearch_bttnNew"
        android:layout_alignLeft="@+id/itemSearch_edtxSearch"
        android:layout_below="@+id/itemSearch_txvwCount" >

    </ListView>

    <TextView
        android:id="@+id/itemSearch_txvwCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/itemSearch_lsvwList"
        android:layout_below="@+id/itemSearch_bttnSearch"
        android:text="@string/items_found" />

    <Switch
        android:id="@+id/itemSearch_swchLive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/itemSearch_edtxSearch"
        android:layout_below="@+id/itemSearch_edtxSearch"
        android:text="Live" />

    <Button
        android:id="@+id/itemSearch_bttnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/itemSearch_edtxSearch"
        android:text="Go" />

    <Button
        android:id="@+id/itemSearch_bttnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/itemSearch_lsvwList"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/itemSearch_lsvwList"
        android:text="@string/NEW" />

</RelativeLayout>
